added language phrases

--- a/lang/he.json
+++ b/lang/he.json
@@ -14,5 +14,8 @@
     "hero.title": "ברוכים הבאים ל-:name!",
     "hero.text": "הצטרפו אלינו ותתחילו ללמוד",
     "continue-learning": "המשיכו ללמוד",
-    "bestseller-courses": "הקורסים הפופולריים ביותר"
+    "bestseller-courses": "הקורסים הפופולריים ביותר",
+    "my-learning": "הלמידה שלי",
+    "notifications": "התראות",
+    "account": "חשבון"
 }
